overflow fixed

--- a/style.css
+++ b/style.css
@@ -1,21 +1,13 @@
 body, main {
-  /*width: 100%;
-  height: 100%;*/
+  width: 100%;
+  height: 100%;
   font-family: 'Roboto', sans-serif;
   background: #eee;
-  overflow-x: hidden;
-  overflow-y: visible;
 }
 
 #left {
   background: #222;
   color: #eee;
-  height: 0;
-  overflow-y: hidden;
-}
-
-.row {
-  height: inherit;
 }
 
 #logo{
@@ -31,6 +23,25 @@ h3 {
   font-size: 1.3em;
   margin: 0;
   padding: 0;
+}
+
+.my-button {
+  -webkit-transition-duration: 1s ease; /* Safari */
+  transition-duration: 1s ease;
+  border: 1px solid #eee;
+  border-radius: 3px;
+  background: #eee;
+  color: #222;
+  padding: 10px 10px;
+  margin: auto;
+}
+.my-button:hover {
+  background: #555;
+  color: #eee;
+}
+.my-button:active {
+  background: #444;
+  color: #eee
 }
 
 #nav{
@@ -69,10 +80,9 @@ h3 {
 }
 
 #right {
-  height: 100vh;
   text-align: center;
   color: #555;
-  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .nopadding {
@@ -114,6 +124,10 @@ hr {
     position: fixed;
   }
 
+  .row {
+    height: inherit;
+  }
+
   #logo {
     padding: 0 3vw;
     height: 45%;
@@ -125,24 +139,6 @@ hr {
     height: 10%;
     display:flex;
     justify-content:center;
-  }
-  .my-button {
-    -webkit-transition-duration: 1s ease; /* Safari */
-    transition-duration: 1s ease;
-    border: 1px solid #eee;
-    border-radius: 3px;
-    background: #eee;
-    color: #222;
-    padding: 10px 10px;
-    margin: auto;
-  }
-  .my-button:hover {
-    background: #555;
-    color: #eee;
-  }
-  .my-button:active {
-    background: #444;
-    color: #eee
   }
 
   #nav {
@@ -158,6 +154,12 @@ hr {
   #trademark {
     text-align: center;
     height: 5%;
+  }
+
+  #right {
+      height: 100vh;
+      overflow-x: hidden;
+      overflow-y: visible;
   }
 
   #landing-head {
